Upgrade to IntelliJ 2024.1